* Updated all JS libraries * Updated npm libraries * Updated grunt to leverage new locations of module template

--- a/views/apidoc/_template/api-content.html
+++ b/views/apidoc/_template/api-content.html
@@ -1,5 +1,5 @@
 <%
-console.log( api );
+//console.log( api );
 var pathKeys = _.keys(api.paths);
 var responseCodeTemplate = _.template( $( "#httpcodes-template" ).html() );
 var securityDefinitionsTemplate = _.template( $( "#security-definitions-template" ).html() );
@@ -26,7 +26,7 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                 <div id="overview" class="tab-pane active service-summary">
                     <!--- Service Title and Description --->
                     <h2><%= api.info.title %></h2>
-                    
+
                     <% if( !_.isUndefined( api.info.version ) && api.info.version.length > 0 ) { %>
                         <h4>Version: <span class="label label-primary"><%= api.info.version %></span></h4>
                     <% } %>
@@ -40,14 +40,14 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                                 <ul>
                                 <% _.each( _.keys( api.info.contact ), function(contactKey){ %>
                                     <li class="list-unstyled">
-                                        <strong><%= contactKey.toProperCase() %>:</strong> 
-                                        
+                                        <strong><%= contactKey.toProperCase() %>:</strong>
+
                                         <% if( api.info.contact[ contactKey ].indexOf( "http" ) === 0 ) { %>
                                             <a href="<%= api.info.contact[ contactKey ] %>" target="_blank">
                                         <% } %>
-                                        
+
                                         <%= api.info.contact[ contactKey ] %>
-                                        
+
                                         <% if( api.info.contact[ contactKey ].indexOf( "http" ) === 0 ) { %>
                                             </a>
                                         <% } %>
@@ -58,13 +58,13 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                         <% } %>
 
                         <% if( !_.isUndefined( api.info.license ) && !_.isUndefined( api.info.license.url ) ){ %>
-                            
-                            <dt class="text-info">License: 
+
+                            <dt class="text-info">License:
                                 <a href="<%=api.info.license.url%>">
-                                    <%= ( 
-                                        !_.isUndefined( api.info.license.name ) && api.info.license.name.length > 0 
-                                            ? api.info.license.name 
-                                            : api.info.license.url 
+                                    <%= (
+                                        !_.isUndefined( api.info.license.name ) && api.info.license.name.length > 0
+                                            ? api.info.license.name
+                                            : api.info.license.url
                                         )
                                     %>
                                     <i class="fa fa-link"></i>
@@ -74,7 +74,7 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                         <% } %>
 
                         <% if( !_.isUndefined( api.info.termsOfService ) && api.info.termsOfService.length > 0 ) { %>
-                            <% if( api.info.termsOfService.indexOf( "http" ) === 0 ){ %>          
+                            <% if( api.info.termsOfService.indexOf( "http" ) === 0 ){ %>
                                 <dt class="text-info">
                                     Terms of Service: <a href="<%= api.info.termsOfService %>"><%= api.info.termsOfService %></a>
                                 </dt>
@@ -88,12 +88,12 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
 
 
                         <% if( !_.isUndefined( api.externalDocs )  && !_.isUndefined( api.externalDocs.url ) ){ %>
-                            <dt class="text-info">External Docs: 
+                            <dt class="text-info">External Docs:
                                 <a href="<%=api.externalDocs.url%>">
-                                    <%= ( 
-                                        !_.isUndefined( api.externalDocs.description ) && api.externalDocs.description.length > 0 
-                                            ? api.externalDocs.description 
-                                            : api.externalDocs.url 
+                                    <%= (
+                                        !_.isUndefined( api.externalDocs.description ) && api.externalDocs.description.length > 0
+                                            ? api.externalDocs.description
+                                            : api.externalDocs.url
                                         )
                                     %>
                                     <i class="fa fa-globe"></i>
@@ -110,23 +110,23 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                             <% }); %>
                         <% } else { %>
                             <li>
-                                <em>Default:</em> 
+                                <em>Default:</em>
                                 <a href="<%= ( !_.isUndefined( api.scheme ) ? api.scheme + '://' : window.location.protocol + "//" ) %><%=api.host%><%= api[ "basePath" ] %>">
                                     <%= ( !_.isUndefined( api.scheme ) ? api.scheme + '://' : window.location.protocol + "//" ) %><%=api.host %><%= api[ "basePath" ] %>
                                 </a>
                             </li>
                         <% } %>
-                        
+
                     </ul>
 
                     <!--- Paths --->
                     <h3>Service Available Paths</h3>
 
-                   <p> 
+                   <p>
                    <% _.each( pathKeys, function( key){ %>
 
                         <a class="btn btn-xs btn-primary path-nav" href="#<%= api.paths[ key ][ "x-resourceId" ] %>"><%= key %></a>
-                    
+
                     <% }); %>
                     </p>
                     <h3>MIME Types Consumed</h3>
@@ -134,7 +134,7 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                     <% _.each( api.consumes, function(type){ %>
 
                         <span class="label label-primary consumes-nav" data-mimetype="type"><%= type %></span>
-                    
+
                     <% }); %>
                     </p>
                     <!--- API Return Formats --->
@@ -143,7 +143,7 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                     <% _.each( api.produces, function(type){ %>
 
                         <span class="label label-primary consumes-nav" data-mimetype="type"><%= type %></span>
-                    
+
                     <% }); %>
                     </p>
 
@@ -155,7 +155,7 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                         <h3>Throws on Invalid Extension:  <code><%= api[ "x-throwOnInvalidExtension"] %></code></h3>
                     <% } %>
 
-                    <% if( !_.isUndefined( api.securityDefinitions ) ) { 
+                    <% if( !_.isUndefined( api.securityDefinitions ) ) {
                     %>
                         <!-- Security Definitions -->
                         <h3>Security Definitions</h3>
@@ -169,7 +169,7 @@ var paramTemplate = _.template( $( "#parameter-template" ).html() );
                     <% } %>
 
                     <%= renderXAttributes( api ) %>
-                    
+
                     <div class="clearfix"></div>
 
                 </div>
