PDF export change to HTMl with dialog on printing

--- a/resources/assets/sass/export.scss
+++ b/resources/assets/sass/export.scss
@@ -11,7 +11,7 @@ $control-sidebar-width : 350px;
 @import '~bootstrap-vue/src/index';
 @import "~font-awesome/scss/font-awesome";
 @import '~icheck/skins/all.css';
-@import '~prismjs/themes/prism-solarizedlight.css';
+@import '~prismjs/themes/prism.css';
 
 @page {
   size: 8.5in 11in;/* width height */
