--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,3 +9,4 @@ $control-sidebar-width : 350px;
 @import "~font-awesome/scss/font-awesome";
 @import '~icheck/skins/all.css';
 @import '~prismjs/themes/prism-okaidia.css';
+@import '~vuejs-dialog/dist/vuejs-dialog.min.css';
